Implement : HashTag update